--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Type 3"/>
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Type 4"/>
     </LinearLayout>
 
     <TextView
@@ -33,6 +39,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="result"/>
-
-
 </LinearLayout>
